--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/app/node_modules
-/app/package-lock.json
+/my-app-server/app/node_modules
+/my-app-server/app/package-lock.json
 /my-app-front/node_modules
 /my-app-front/package-lock.json
 
