添加pm2监控node服务自刷新和添加category搜索页面

--- a/my-app-server/Dockerfile-dev
+++ b/my-app-server/Dockerfile-dev
@@ -27,5 +27,5 @@ RUN npm install
 
 # RUN echo $(find server -name index.js)
 EXPOSE 3001
-ENTRYPOINT ["npm", "run", "start_pro"]
+ENTRYPOINT ["npm", "run", "start_dev"]
 # ENTRYPOINT ["/var/my-app-service/run.sh"]
