--- a/my-app-front/package.json
+++ b/my-app-front/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-import": "^1.11.0",
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
